Fixed issue #08372: template editor - wrong height of select lists Fixed issue : template editor user pref don't change template editor mode Dev: The template editor is active, ace is now the new editor

--- a/styles/adminstyle.css
+++ b/styles/adminstyle.css
@@ -113,7 +113,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     line-height: 1.5;
     height: 2em;
 }
-textarea{
+textarea,select[size]{
     height: auto;
 }
 .ui-jqgrid{clear:both}
